feat: created ListAll endpoint
